working on generic_put

--- a/pyfem/tests/data/yaml/controllers_generic_post.yaml
+++ b/pyfem/tests/data/yaml/controllers_generic_post.yaml
@@ -1,30 +1,20 @@
 # http://yaml-online-parser.appspot.com
 # Attribute Types
-emails_with_no_eIds:
+PrsMoeStooge:
   _cls: Prs
-  slug  : emails_with_no_eIds
-  fNam  : Larry
+  slug  : moestooge
+  fNam  : Moe
   lNam  : Stooge
   emails:
     - _cls   : Email
       _types : [Email]
+      eId    : 1
       typ    : work
-      eId    : 6
       address: bill@ms.com
       prim   : true
-    - _cls   : Email
-      _types : [Email]
-      typ    : work
-      eId    : 2
-      address: steve@apple.com
-    - _cls   : Email
-      _types : [Email]
-      typ    : work
-      eId    : 3
-      address: sue@apple.com
-larry_stooge:
+PrsLarryStooge:
   _cls: Prs
-  slug  : larry_stooge
+  slug  : larrystooge
   fNam  : Larry
   lNam  : Stooge
   emails:
@@ -69,23 +59,6 @@ larry_stooge:
           _types : [Tel]
           typ    : work
           text   : 123 123 1234
-moe_stooge:
-  _cls: Prs
-  slug  : moe_stooge
-  fNam  : Moe
-  lNam  : Stooge
-  emails:
-    - _cls   : Email
-      _types : [Email]
-      eId    : 1
-      typ    : work
-      address: bill@ms.com
-      prim   : true
-    - _cls   : Email
-      _types : [Email]
-      eId    : 2
-      typ    : work
-      address: steve@apple.com
 noemail:
   _cls: Prs
   slug  : noemail
