--- a/pyfem/tests/data/yaml/controllers_generic_put.yaml
+++ b/pyfem/tests/data/yaml/controllers_generic_put.yaml
@@ -1,9 +1,23 @@
 # http://yaml-online-parser.appspot.com
 # Attribute Types
-
-larry_stooge:
+# http://stackoverflow.com/questions/10805474/updating-specific-record-in-inner-collection-with-mongodb
+PrsPut_fNam:
   _cls: Prs
-  slug  : larry_stooge
+  query: 
+    slug: LarryStooge
+  update:
+    - $cmd: set
+      pos: fNam
+      field: fNam
+      _cls: String
+      val : Mary
+    - pos: lNam
+      field: lNam
+      _cls: String # default to non-validating field
+      val : Smith
+PrsLarryStooge:
+  _cls: Prs
+  slug  : LarryStooge
   fNam  : Larry
   lNam  : Stooge
   emails:
@@ -25,20 +39,3 @@ larry_stooge:
       typ    : work
       title  : this is a test
       body   : Now is the time
-moe_stooge:
-  _cls: Prs
-  slug  : moe_stooge
-  fNam  : Moe
-  lNam  : Stooge
-  emails:
-    - _cls   : Email
-      _types : [Email]
-      eId    : 1
-      typ    : work
-      address: bill@ms.com
-      prim   : true
-    - _cls   : Email
-      _types : [Email]
-      eId    : 2
-      typ    : work
-      address: steve@apple.com
