good progress on generic_put

--- a/pyfem/tests/data/yaml/controllers_generic_put.yaml
+++ b/pyfem/tests/data/yaml/controllers_generic_put.yaml
@@ -7,15 +7,40 @@ PrsPut_fNam:
     slug: LarryStooge
   update:
     cmd: $set
-    items:
-      - pos: fNam
-        field: fNam
+    flds:
+      fNam:
+        pos: fNam
         _cls: String
         val : Mary
-      - pos: lNam
-        field: lNam
+      lNam:
+        pos: lNam
         _cls: String # default to non-validating field
         val : Smith
+PrsPut_emails_2_typ:
+  _cls: Prs
+  query: 
+    slug: LarryStooge
+    emails.eId: 2
+  update:
+    eId: 2
+    cmd: $set
+    flds:
+      emails:
+        pos: emails.$.typ
+        fld: typ
+        _cls: Email
+        val : 
+PrsPut_emails_2_notes_1:
+  # update first title in note.eId=1 in second email.eId=2
+  _cls: Prs
+  query: 
+    slug: LarryStooge
+  update:
+    docPath: emails.2.notes.1 # numbers refer to eId's, NOT element offsets
+    actions:
+      $set:
+        flds:
+          title: New Title
 PrsLarryStooge:
   _cls: Prs
   slug  : LarryStooge
@@ -33,10 +58,10 @@ PrsLarryStooge:
       eId    : 2
       typ    : work
       address: steve@apple.com
-  notes:
-    - _cls   : Note
-      _types : [Note]
-      eId    : 1
-      typ    : work
-      title  : this is a test
-      body   : Now is the time
+      notes:
+        - _cls   : Note
+          _types : [Note]
+          eId    : 1
+          typ    : work
+          title  : this is a
+          body   : Now is the time
