generic_put logging event

--- a/pyfem/tests/data/yaml/controllers_generic_put.yaml
+++ b/pyfem/tests/data/yaml/controllers_generic_put.yaml
@@ -46,6 +46,7 @@ PrsLarryStooge:
   slug  : LarryStooge
   fNam  : Larry
   lNam  : Stooge
+  oBy  : 50c502b7936aa20e20edd211
   emails:
     - _cls   : Email
       _types : [Email]
