--- a/pyfem/tests/data/yaml/controllers_generic_put.yaml
+++ b/pyfem/tests/data/yaml/controllers_generic_put.yaml
@@ -1,7 +1,22 @@
 # http://yaml-online-parser.appspot.com
 # Attribute Types
 # http://stackoverflow.com/questions/10805474/updating-specific-record-in-inner-collection-with-mongodb
-PrsPutAddEmail:
+PrsAddOneNewEmailToEmptyEmailsField:
+  # add a new email to emails
+  _cls: Prs
+  query: 
+    slug: PrsLarryStoogeEmptyEmails
+  update:
+    target_eIdPath: 
+    actions:
+      $push: # uses pushAll if more than one item
+        flds:
+          emails:
+            - _cls   : Email # maybe not necessary if I know _cls of target ListField
+              _types : [Email] # necessary?
+              typ    : work
+              address: timothy@ms.com
+PrsAddOneNewEmailToExistingEmailsField:
   # add a new email to emails
   _cls: Prs
   query: 
@@ -9,7 +24,22 @@ PrsPutAddEmail:
   update:
     target_eIdPath: 
     actions:
-      $pushAll:
+      $push: # uses pushAll if more than one item
+        flds:
+          emails:
+            - _cls   : Email # maybe not necessary if I know _cls of target ListField
+              _types : [Email] # necessary?
+              typ    : work
+              address: timothy@ms.com
+PrsAddTwoNewEmailsToExistingEmailsField:
+  # add a new email to emails
+  _cls: Prs
+  query: 
+    slug: LarryStooge
+  update:
+    target_eIdPath: 
+    actions:
+      $push: # uses pushAll if more than one item
         flds:
           emails:
             - _cls   : Email # maybe not necessary if I know _cls of target ListField
@@ -19,7 +49,7 @@ PrsPutAddEmail:
             - _cls   : Email # maybe not necessary if I know _cls of target ListField
               _types : [Email] # necessary?
               typ    : home
-              address: sam@ms.com
+              address: sam@ms.com              
 PrsPut_emails_1:
   # update emails[0] fields and add a notes list with a new note missing eId
   _cls: Prs
@@ -87,3 +117,21 @@ PrsLarryStooge:
           typ    : work
           title  : this is a
           body   : Now is the time
+  notes:
+    - _cls   : Note
+      _types : [Note]
+      typ    : work
+      title  : base note
+      body   : this is a base note
+PrsLarryStoogeEmptyEmails:
+  _cls: Prs
+  slug  : PrsLarryStoogeEmptyEmails
+  fNam  : Larry
+  lNam  : Stooge
+  oBy  : 50c502b7936aa20e20edd211
+  notes:
+    - _cls   : Note
+      _types : [Note]
+      typ    : work
+      title  : base note
+      body   : this is a base note      
