--- a/pyfem/tests/data/yaml/shiv_post1.yaml
+++ b/pyfem/tests/data/yaml/shiv_post1.yaml
@@ -1,33 +1,23 @@
 # http://yaml-online-parser.appspot.com
 # Attribute Types
-emails_with_no_eIds:
+PrsMoeStooge:
   _cls: Prs
-  slug  : emails_with_no_eIds
-  fNam  : Larry #Should contain only alphabetical characters
+  slug  : moestooge
+  fNam  : Moe
   lNam  : Stooge
-  gen   : jwgr #no validation
   emails:
     - _cls   : Email
       _types : [Email]
-      typ    : work
       eId    : 1
-      address: bill%%@ms.com
-      prim   : True
-    - _cls   : Email
-      _types : [Email]
       typ    : work
-      eId    : 2
-      address: steve@apple.com
-    - _cls   : Email
-      _types : [Email]
-      typ    : work
-      eId    : 3
-      address: sue@apple.com
-larry_stooge:
+      address: bill@ms.com
+      prim   : true
+PrsLarryStooge:
   _cls: Prs
-  slug  : larry_stooge
+  slug  : larrystooge
   fNam  : Larry
   lNam  : Stooge
+  id    : 8273684684
   emails:
     - _cls   : Email
       _types : [Email]
@@ -39,10 +29,10 @@ larry_stooge:
       _types : [Email]
       eId    : 2
       typ    : work
-      address: steve$@apple.com
+      address: steve@apple.com
     - _cls   : Email
       _types : [Email]
-      eId    : 
+      eId    : 3
       typ    : work
       address: sue@apple.com
       notes:
@@ -70,23 +60,6 @@ larry_stooge:
           _types : [Tel]
           typ    : work
           text   : 123 123 1234
-moe_stooge:
-  _cls: Prs
-  slug  : moe_stooge
-  fNam  : Moe
-  lNam  : Stooge
-  emails:
-    - _cls   : Email
-      _types : [Email]
-      eId    : 1
-      typ    : work
-      address: bill@ms.com
-      prim   : true
-    - _cls   : Email
-      _types : [Email]
-      eId    : 2
-      typ    : work
-      address: steve@apple.com
 noemail:
   _cls: Prs
   slug  : noemail
