working on preventing dup values in typefields

--- a/pyfem/tests/data/yaml/models_indexes.yaml
+++ b/pyfem/tests/data/yaml/models_indexes.yaml
@@ -17,3 +17,22 @@ PrsLarryStooge:
       eId    : 2
       typ    : work
       address: steve@apple.com
+
+PrsMoeStooge:
+  _cls: Prs
+  slug  : LarryStooge
+  fNam  : Moe
+  lNam  : Stooge
+  emails:
+    - _cls   : Email
+      _types : [Email]
+      eId    : 1
+      typ    : work
+      address: bill@ms.com
+      prim   : true
+    - _cls   : Email
+      _types : [Email]
+      eId    : 2
+      typ    : work
+      address: steve@apple.com
+      
